RESOLVED FIXED311734
[JSC] Short-circuit assignment should not overwrite read-only locals
https://bugs.webkit.org/show_bug.cgi?id=311734
Summary [JSC] Short-circuit assignment should not overwrite read-only locals
Sosuke Suzuki
Reported 2026-04-08 09:09:42 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-04-08 09:13:26 PDT
EWS
Comment 2 2026-04-11 23:25:30 PDT
Committed 311025@main (d55d921dd45a): <https://commits.webkit.org/311025@main> Reviewed commits have been landed. Closing PR #62277 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-11 23:26:13 PDT
EWS
Comment 4 2026-04-27 19:54:14 PDT
Committed 305413.738@safari-7624-branch (d91685ba7763): <https://commits.webkit.org/305413.738@safari-7624-branch> Reviewed commits have been landed. Closing PR #5068 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.